Image and Display, review features (closed #1292, closed #1293, closed #1294)
git-svn-id: file:///home/svn/shoola-omero/trunk@7175 6f2cb1de-eb0d-0410-b157-e593188b5901